--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.9.0
   dartz: ^0.10.1
   cached_network_image: ^3.4.1
+  shimmer_animation: ^2.2.2
 
 dev_dependencies:
   flutter_test:
