--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cached_network_image: ^3.4.1
   shimmer_animation: ^2.2.2
   url_launcher: ^6.3.2
+  webview_flutter: ^4.13.0
+
 
 dev_dependencies:
   flutter_test:
