--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   awesome_snackbar_content: ^0.1.6
   flutter_screenutil: ^5.9.3
   get_it: ^8.2.0
+#  google_sign_in: ^7.2.0
+  google_sign_in: ^6.3.0
+  firebase_auth: ^6.1.2
+  firebase_core: ^4.2.1
 
 
 dev_dependencies:
